2007/10/16
	1. Added a class in unitTesting to test whether a configuration constraint is a projection.
2007/10/10
	kwsPlus release 1.1
	
2007/10/09
	1. Correct a bug in  findRsCurveNumInVector() : 
	   - put an Epsilon for the test else there is a bug when u ~= val 
	
2007/09/29
	1. Added visibility algorithm.
	2. Added a roadmap builder delegate to display the roadmap.
	3. Modified construction of CkwsPlusRoadmap.
	
2007/09/16
	Completed the implementation of the Reeds&Shepp Curve
		  - MaxAbsoluteDerivative 
		  - Reduce the option RS_ALL type of curve

2007/07/13
	kwsPlus release 1.0
	
2007/05/02
	Added methods and attributes to keep track of extration and reversion of KineoWorks direct paths.
	
2007/04/27
	1. Class CkwsPlusRoadmap now inherits from CkppKCDAssembly instead of CkppKCDPolyhedron, in order to allow roadmap building on
	run-time.
	2. Added a method "lastEdge" to this class. To use with a roadmap builder delegate and a progress delegate for a "real-time" display

2007/04/26
	Added class CkwsPlusRoadmap: derives from CkwsRoadmap and from CkppKCDPolyhedron and implements a display() method that
	puts the roadmap in the geometry node of the model tree if any.
	
2007/04/20
	1. Documentation is now generated at installation
	2. kwsPlus.doxytag is produced by doxygen and installed.
	
2007/04/03
	1. Flatness based computations for carlike robot are now externalized in another library in order to be reused for other purposes.
	2. Removed reference to package angle. angle is provided by flatCarDirectPath.